cmake_minimum_required(VERSION 3.12)
project(webserver C CXX)

set(CMAKE_CXX_STANDARD 17)
file(GLOB include_SRC
        "*.hpp")
find_package(Threads REQUIRED)

install(DIRECTORY include/stlcache DESTINATION include)
set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_MULTITHREADED ON)
find_package(Boost 1.58.0 REQUIRED COMPONENTS system thread unit_test_framework)
set(LIBS ${Boost_LIBRARIES})
include_directories(${CMAKE_SOURCE_DIR}/include ${Boost_INCLUDE_DIRS})
link_directories(${Boost_LIBRARY_DIRS})
#set(CMAKE_C_COMPILER /usr/local/bin/gcc-8)
#set(CMAKE_CXX_COMPILER /usr/local/bin/g++-8)
add_executable(webserver main.cpp static/static_const.h)
add_executable(multithread multithread.cpp static/static_const.h)
#add_executable(webserver2 webserver.cpp)
add_executable(webserver_threadpool webserver_threadpool.cpp)
add_executable(webserver_lru multithread_lru.cpp ${include_SRC})
add_executable(webserver_lfu multithread_lfu.cpp ${include_SRC})
add_executable(threadpool_lfu threadpool_lfu.cpp ${include_SRC})
add_executable(threadpool_lru threadpool_lru.cpp ${include_SRC})
add_executable(threadpool_arc threadpool_arc.cpp ${include_SRC})
add_executable(LRU standalone/LRU.c)
add_executable(LFU standalone/LFU.c)
add_executable(GD standalone/GD.c)
target_link_libraries(webserver_threadpool ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(threadpool_arc ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
target_link_libraries(threadpool_lru ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
target_link_libraries(threadpool_lfu ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})